--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,19 @@
-version: '3'
+version: '3.8'
+
 services:
-  web:
-    build: .
+  app:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    image: 2pptx:latest
     ports:
-      - "6002:5000"
+      - "6002:5000" # Externer Port 6002 wird auf internen Port 5000 gemappt
+    environment:
+      FLASK_ENV: production
+      FLASK_APP: app.py
+    volumes:
+      - .:/app # Bindet das aktuelle Verzeichnis ins Containerverzeichnis /app
+    working_dir: /app
     labels:
       - "com.centurylinklabs.watchtower.enable=false"
     restart: always
