--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
       dockerfile: Dockerfile
     image: 2pptx:latest
     ports:
-      - "6002:5000" # Externer Port 6002 wird auf internen Port 5000 gemappt
+      - "$PORT:5000" # Externer Port 6002 wird auf internen Port 5000 gemappt
     environment:
       FLASK_ENV: production
       FLASK_APP: app.py
