--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,3 +8,6 @@ services:
     labels:
       - "com.centurylinklabs.watchtower.enable=false"
     restart: always
+networks:
+  nginx_proxy_net:
+    external: true
