--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,8 @@ services:
     labels:
       - "com.centurylinklabs.watchtower.enable=false"
     restart: always
+    networks:
+      nginx_proxy_net:
 networks:
   nginx_proxy_net:
     external: true
